Fixed some layout issues

--- a/Application Source/ss-dashboard/src/app/views/home/home.component.scss
+++ b/Application Source/ss-dashboard/src/app/views/home/home.component.scss
@@ -28,6 +28,7 @@ section#hero .col{
 
 .hero {
     padding-top: 15%;
+    padding-bottom: 15%;
 }
 
 .display-container {
